# RayTracingWeekendCRTP

./: .clang-format  CMakeLists.txt  README.md
olc/: olcPixelGameEngine.h
src/: AABB.hpp  BVHNode.cpp  BVHNode.hpp  Base.hpp  Camera.hpp  ConstantTexture.hpp  DynamicVector.hpp  FunkyTexture.hpp  Hash.hpp  HitRecord.hpp  Hitable.hpp  HitableList.cpp  HitableList.hpp  HostImageRGB.hpp  HostTexture.hpp  LoadImage.cpp  LoadImage.hpp  LoadPLY.hpp  Material.hpp  Materials.hpp  Math.cpp  Math.hpp  Matrix.hpp  Ray.hpp  RenderProvider.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  TextureBase.hpp  Textures.hpp  Timer.hpp  Triangles.hpp  Variant.hpp  Vector.hpp  World.hpp  olcMain.cpp
